# dumb

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.beta  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  dircfg.h.in  dumb-0.13.1-1.spec  dumb-0.13.2-1.spec  dumb-0.13.3-1.spec  dumb-0.13.4-1.spec  rpmspec.m4
aux/: Makefile.am  Makefile.in  dumb-lsm.in  mkinstalldirs
docs/: #README.netplay#  .cvsignore  CHANGES.Niemitalo  Changes  FAQ  Install-FAQ  MMX.txt  Makefile.am  Makefile.in  README.dumb  README.fixbm  README.netplay  README.ptcomp  README.textures  TODO  autoconf  configure.txt  contrib.html  discord.txt  dos.txt  dumb-0.09.lsm  dumb-0.12.1.lsm  dumb-0.12.beta1.lsm  dumb-0.12.beta2.lsm  dumb-0.12.lsm  dumb-0.13.0.lsm  dumb-0.13.1.lsm  dumb-autoins.el  dumb-pt-index.sgml  dumb-pt.info  dumb-pt.sgml  dumb-pt.texinfo  dumblogo.ppm  ifnames  indent.pro  keymap.txt  linux-libc5.txt  log-classes  params.txt  source.html  (+4 more)
docs/dos/: Makefile.am  Makefile.in  dos-compile.txt  pbm-Makefile  pbmplus.h  ppm-Makefile
docs/dumb-pt-html/: Makefile.am  dumb-pt-html.dsssl
docs/maint/: Makefile.am  Makefile.in  contrib.html  dumb-autoins.el  indent.pro  lsm-template  source.html
docs/patches/: Makefile.am  Makefile.in  aalib-1.2-add_.diff  gettext-0.10.35-1-po-regexp.diff  gettext-0.10.35-2-intllibs.diff  gettext-0.10.35-3-memcpy.diff  gettext-0.10.35-4-comments.diff  gettext-0.10.35-5-destdir.diff  gettext-0.10.35-6-mkinstalldirs.diff  gettext-0.10.35-7-gnusource.diff
doom/: .cvsignore  Makefile.am  Makefile.in  animtex.pt  camera.pt  doom.pt  font.pt  furnishings.pt  generic.pt  gettables.pt  levels.pt  linetypes.pt  missiles.pt  monsters.pt  sectortypes.pt  textures.pt  weapons.pt
dumb/: .cvsignore  Makefile.am  Makefile.in  aalib_input.c  aalib_video.c  animtex.c  animtex.h  bangbang.c  banner.c  banner.h  bogothing.c  bogothing.h  ctlkey.c  ctlkey.h  dos_input.c  dos_video.c  dosinput.c  dosvideo.c  draw.c  draw.h  dsound.c  dsound.h  dumb.c  dumbdefs.pt  dummy_input.c  dummy_net.c  dummy_video.c  dyncode.c  dyncode.h  fbrerend.c  fbrerend.h  game.c  game.h  generic_fbrerend.c  gettable.c  gettable.h  ggi_degas_video.c  ggi_olddegas_video.c  ggi_renoir_video.c  ggi_video.c  (+58 more)
htic/: Makefile.am  Makefile.in  ambient.pt  ammo.pt  animtex.pt  font.pt  furniture.pt  generic.pt  gettables.pt  htic.pt  keys.pt  levels.pt  missiles.pt  monsters.pt  test.pt  weapons.pt
intl/: ChangeLog  dcgettext.c  localealias.c
lib/: conf.c  conf.h  endian.h  fixed.c  fixed.h  log.c  log.h  safeio.c  safeio.h  safem.c  safem.h  timer.c  timer.h
libdumb/: Makefile.am  Makefile.in  animtexstruct.h  dos_sound.c  dsound.c  dsound.h  dummy_sound.c  font.c  font.h  fontinwad.c  fontinwad.h  fontmap.c  fontmap.h  fontmapinwad.c  fontmapinwad.h  gettableinwad.c  gettableinwad.h  gettablestruct.h  levdatanums.h  levinfostruct.h  linetypestruct.h  linux_sound.c  lumpver.c  lumpver.h  mme_sound.c  pastepic.h  prothing.c  prothing.h  prothingstruct.h  protoinwad.c  protoinwad.h  sound.h  sound_mix.c  sound_mix.h  texture.c  texture.h  view.c  view.h
libdumbrender/: Makefile.am  Makefile.in
libdumbutil/: Makefile.am  Makefile.in  align.h  bugaddr.c  bugaddr.h  confargs.c  confargs.h  confdef.h  confeng.c  confeng.h  conffile.c  conffile.h  confhelp.c  confhelp.h  copyright.c  copyright.h  dos_timer.c  dumb-nls.h  endiantypes.h  exitcode.h  fixed.c  fixed.h  intset.c  intset.h  log.c  log.h  safeio.c  safeio.h  safem.c  safem.h  strgrow.c  strgrow.h  timer.c  timer.h  utf8.c  utf8.h
libdumbwad/: Makefile.am  Makefile.in  doomstruct.h  loadlump.c  wadchain-wrapper.cc  wadchain.cc  wadchain.hh  wadio.c  wadio.h  wadstruct.h  wadwr.c  wadwr.h
libdumbworldb/: Makefile.am  Makefile.in  PLAN  alloc.c  del.c  detach.c  difficulty.c  doomwad.h  dumbworldb.h  dumbworldb.hh  dummyvtbl.c  findsec.c  hexenwad.h  initfini.c  isok.c  lineprop.c  loaddoom.c  observer.c  private.h  prop.c  savedoom.c  thingsec.c
libmissing/: Makefile.am  Makefile.in  hstrerror.c  libmissing.h  snprintf.c  strnlen.c
plat/: aalib_input.c  aalib_video.c  ctlkey_input.c  ctlkey_input.h  dosinput.c  dosvideo.c  dummy_input.c  dummy_net.c  dummy_sound.c  dummy_video.c  fbrerend.h  generic_fbrerend.c  ggi_video.c  input.h  keymap.c  keymap.h  keymapconf.c  keymapconf.h  le32_fbrerend.c  le64_fbrerend.c  linux_input.c  linux_sound.c  linux_video.c  mme_sound.c  net.h  sound.h  unix_net.c  vgagl_video.c  video.h  x11_video.c
po/: ChangeLog  Makefile.in.in  POTFILES.in  cat-id-tbl.c  dumb.pot  fi.gmo  fi.gmo-utf8  fi.po  fi.po-utf8
ptcomp/: .cvsignore  Makefile.am  Makefile.in  animcomp.c  animcomp.h  fontcomp.c  fontcomp.h  fontmapcomp.c  fontmapcomp.h  gettcomp.c  gettcomp.h  globals.h  licomp.c  licomp.h  ltcomp.c  ltcomp.h  msgdomcomp.c  msgdomcomp.h  parm.c  parm.h  phasecomp.c  phasecomp.h  protocomp.c  protocomp.h  ptcomp.c  soundcomp.c  soundcomp.h  token.c  token.h
render/: draw.c  draw.h  flrender.c  rendcore.c  render.c  render.h  slice.c  slice86.c  view.c  view.h
scripts/: Makefile.am  dumb-autoins.el  dumb-lsm.in  mkinstalldirs  rpmspec.m4
test/: .cvsignore  Makefile.am  Makefile.in  dwdbtest.c  fixed_bm.c  ldltest.c
tool/: .cvsignore  Makefile.am  Makefile.in  WADTOOL.PLAN  dark2trans.c  fixed_bm.c  mkdfnt.c  mknulmap.c  mkpnames.c  pngtodumb.c  ppmtodumb.c  ptcomp.c  todumb.c  todumb.h  wadtool.c
wad/: loadlump.c  wadio.c  wadstruct.h  wadstruct.h.old  wadwr.c  wadwr.h
xwad/: .cvsignore  Makefile.am  Makefile.in  choose.c  choose.h  colour.c  colour.h  connect.c  controls.c  controls.h  disphash.c  disphash.h  drawmap.c  mapcon.c  savemap.c  tchoose.c  timewait.c  timewait.h  xproctls.c  xproto.c  xproto.h  xtexture.c  xtexture.h  xwad.c  xwad.h  xwadctls.c  xwadmap.h
